# alpha_std_ws

./: usbl_node.cpp  usbl_node.hpp
src/alpha_std_auv/alpha_std_auv/: CMakeLists.txt
src/alpha_std_auv/alpha_std_bringup/: CMakeLists.txt  package.xml
src/alpha_std_auv/alpha_std_bringup/launch/: bringup_simulation.launch  bringup_simulation_multi_agent.launch  bringup_simulation_swarm.launch
src/alpha_std_auv/alpha_std_bringup/launch/include/: control.launch.xml  description.launch.xml  localization.launch.xml
src/alpha_std_auv/alpha_std_config/: CMakeLists.txt  package.xml
src/alpha_std_auv/alpha_std_config/config/: control.yaml  robot_localization_local.yaml
src/alpha_std_auv/alpha_std_config/mission/param/: gps_wpt.yaml  path_global.yaml
src/alpha_std_auv/alpha_std_description/: CMakeLists.txt  package.xml
src/alpha_std_auv/alpha_std_description/launch/: description.launch
src/alpha_std_auv/alpha_std_description/urdf/: base.urdf.xacro
src/alpha_std_auv/alpha_std_stonefish/: CMakeLists.txt  package.xml
src/alpha_std_auv/alpha_std_stonefish/description/: alpha_std.scn.xacro  alpha_std_follower.scn.xacro  alpha_std_leader.scn.xacro  alpha_swarm.scn.xacro
src/alpha_std_auv/alpha_std_stonefish/launch/: simulation.launch
src/alpha_std_auv/alpha_std_stonefish/scenarios/: ocean.scn.xacro  ocean_multi_agent.scn.xacro  ocean_swarm.scn.xacro  tank.scn.xacro
src/multi_vehicle_path_planning/: README.md
src/multi_vehicle_path_planning/alpha_std_auv/: package.xml
src/multi_vehicle_path_planning/alpha_std_config/config/: navsat.yaml
src/multi_vehicle_path_planning/alpha_std_config/mission/config/: helm.yaml
src/multi_vehicle_path_planning/alpha_std_doc/: Stonefish_TF_setup_guide.md
src/multi_vehicle_path_planning/alpha_swarm_bringup/: CMakeLists.txt  package.xml
src/multi_vehicle_path_planning/alpha_swarm_bringup/launch/: bringup_helm.launch  bringup_simulation_swarm.launch
src/multi_vehicle_path_planning/alpha_swarm_bringup/launch/include/: control.launch.xml  description.launch.xml  localization.launch.xml
src/multi_vehicle_path_planning/alpha_swarm_description/: CMakeLists.txt  package.xml
src/multi_vehicle_path_planning/alpha_swarm_description/launch/: description.launch
src/multi_vehicle_path_planning/alpha_swarm_description/rviz/: config_swarm.rviz
src/multi_vehicle_path_planning/alpha_swarm_description/urdf/: base.urdf.xacro
src/multi_vehicle_path_planning/alpha_swarm_stonefish/: CMakeLists.txt  package.xml
src/multi_vehicle_path_planning/alpha_swarm_stonefish/description/: alpha_swarm.scn.xacro
src/multi_vehicle_path_planning/alpha_swarm_stonefish/launch/: simulation.launch
src/multi_vehicle_path_planning/alpha_swarm_stonefish/scenarios/: ocean_swarm.scn.xacro
src/multi_vehicle_path_planning/test/: CMakeLists.txt  package.xml
src/multi_vehicle_path_planning/test/src/: usbl_node.cpp  usbl_node.hpp
src/mvp_mission/bhv_path_following/src/path_following/: path_following.h
src/test/launch/: usbl.launch.xml
