<?xml version="1.0"?>
<package format="2">
  <name>alpha_std_auv</name>
  <version>0.0.0</version>
  <description>The alpha_std_auv package</description>

  <maintainer email="mzhou@uri.edu">Mingxi ZHou</maintainer>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
